Fix overflow background for big photos.
remove dropdown-menu

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,22 +33,6 @@ section {
   -webkit-line-clamp: 2; /* number of lines to show */
   -webkit-box-orient: vertical;
 }
-
-.dropdown-menu {
-  position: static;
-  display: block;
-  width: auto;
-  margin: 1rem auto;
-  border: 1px solid var(--gray-border-color);
-}
-
-.dropdown-menu-macos {
-  /* display: grid; */
-  /* gap: .25rem; */
-  padding: .5rem;
-  border-radius: .5rem;
-}
-
 .flex-center {
   display: flex;
   flex-direction: row;
@@ -104,6 +88,44 @@ li span.icon::before{
   background-image: url('/static/icons/file-earmark-music.svg?static=1');
 }
 
+
+.item-list {
+  width: auto;
+  min-width: 10rem;
+  padding: 0;
+  margin: 1rem auto;
+  font-size: 1rem;
+  color: #212529;
+  text-align: left;
+  list-style: none;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid var(--gray-border-color);
+  border-radius: 0.5rem;
+}
+.item-list li {
+
+}
+.item-list li a.item-icon-name {
+  width: auto;
+  margin: 0.5rem 0.5rem;
+  border-radius: 0.5rem;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 8px;
+  padding-right: 50px; /* Leave trailing space for three-dot more button */
+  clear: both;
+  font-weight: 400;
+  color: #212529;
+  text-align: inherit;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: transparent;
+  /* border: 0; */
+  user-select: none;
+}
+
+
 .firstName {
   overflow-x: hidden;
   text-overflow: ellipsis;
@@ -127,6 +149,7 @@ li span.icon::before{
   background-repeat: repeat;
   background-position: center center;
   background-color: gray;
+  overflow: hidden;
 }
 
 #TopBreadcrumb ol{
@@ -147,7 +170,7 @@ li span.icon::before{
   border-radius: 0.5rem;
   /* border-radius: 0; */
   background-color: var(--bs-gray-200);
-  min-width: max(100px, calc(15vw - 1rem));
+  min-width: 100px;
   max-width: min(300px, calc(50vw - 1.75rem));
   height: 32px;
   --btn-background-color: var(--bs-gray-200);
@@ -390,19 +413,17 @@ li span.icon::before{
   font-weight: bold;
 }
 
+#FolderContent ul {}
 
 #FolderContent ul li {
   position: relative;
 }
+
 #FolderContent ul li a:active{
   color: black;
 }
+
 #FolderContent ul li a.item-icon-name { 
-  border-radius: 0.5rem;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 8px;
-  padding-right: 50px; /* Leave trailing space for three-dot more button */
 }
 
 #FolderContent ul li a.item-entry-type-folder::after {
@@ -435,6 +456,13 @@ li span.icon::before{
   background-position: center center;
   background-size: cover;
   background-image: url('/static/icons/three-dots-vertical.svg?static=1');
+}
+
+#FolderContent ul li hr{
+  margin: 0;
+}
+#FolderContent ul li:last-child hr{
+  display: none;
 }
 
 
@@ -582,6 +610,9 @@ li span.icon::before{
   border-top-color: var(--preview-model-bg-color);
 }
 
+#PreviewModal .modal-body .preview-content-container.image-container{
+  overflow: hidden;
+}
 #PreviewModal .modal-body .preview-content-container.video-container{
   width: 100%;
   height: 100%;
@@ -619,7 +650,7 @@ li span.icon::before{
     margin: 0 1rem;
   }
   #TopBreadcrumb ol li {
-    min-width: max(75px, calc(25vw - 1rem));
+    min-width: max(100px, calc(25vw - 1rem));
     max-width: calc(50vw - 3rem);
   }
 
